<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".Exercises_BuildMuscle">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fitness Business"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="667dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_bm_title1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm1"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm2"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_bm_title2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm3"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm4"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_bm_title3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm5"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm6"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_bm_title4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm7"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm8"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_bm_title5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm9"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm10"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_bm_title6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm11"
                android:paddingTop="35dp"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_bm_content6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bm12"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>